--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,23 @@ body {
   left: 0;
   border-top: solid 1px black;
 }
+
+.dialog {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  line-height: 30px;
+  width: 400px;
+  height: 300px;
+  transform: translate(50%, 50%);
+  border: solid 1px gray;
+  text-align: center;
+}
+
+.border {
+  margin-left: 20px;
+  padding: 15px;
+  border: red 1px solid;
+}
